Stop stretching the window control buttons on Windows to the full titlebar height since they look awkward. r=jhirsch

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -231,7 +231,7 @@
 }
 
 .titlebar-buttonbox-container {
-  -moz-box-align: stretch;
+  -moz-box-align: start;
 }
 
 @media (-moz-os-version: windows-win7),
